# litecode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Litecode.sln  Litecode.vcxproj  Litecode.vcxproj.filters  Makefile  README.md
dependencies/glad/: glad.c  glad.h
procode/: Cargo.toml
procode/src/: main.rs
procode/src/gui/: window.rs
procode/src/platform/linux/: window.rs
src/: main.cpp
src/gui_components/: flexbox.cpp  font.cpp  frame.cpp  image.cpp  menu.cpp  text.cpp  window.cpp
src/gui_components/include/: flexbox.hpp  font.hpp  frame.hpp  image.hpp  menu.hpp  text.hpp  window.hpp
src/platform/linux/: linux_opengl.cpp  linux_window.cpp
src/platform/linux/include/: linux_menu.hpp  linux_opengl.hpp  linux_window.hpp
src/platform/windows/: win_menu.cpp  win_opengl.cpp  win_window.cpp
src/platform/windows/include/: win_menu.hpp  win_opengl.hpp  win_window.hpp
src/resources/shaders/: frame.vert  image.frag  image.vert
src/resources/shaders/text/: text.frag  text.vert
src/utilities/: fs.cpp
src/utilities/include/: fs.hpp
